--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,12 +1,24 @@
 .footer{
-    background: #00c4ff;
-    position: absolute;
+
     bottom: 0;
-    width: 100%;
-    padding: 30px 0;
+
+
     text-align: right;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
-    padding-right: 30px;
+
+    color: white;
+    background: #00c4ff;
+    width: 100%;
+
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+
+    padding: 20px;
+
+
+
 }
