--- a/src/styles/Libros.css
+++ b/src/styles/Libros.css
@@ -13,9 +13,9 @@
 }
 
 .Contenedor-principal-libros{
-    margin-top: 10px;
+    margin-top: 20px;
     width: 80%;
-    height: 800px;
+    height: 550px;
     margin-left: 10%;
     padding-top: 5px;
     padding-left: 5px;
@@ -55,16 +55,17 @@
 }
 
 .Contenedor-principal-libros-unidad-txt{
-    width: 85%;
-    height: 210px;
+    width: 75%;
+    height: 100%;
     position: relative;
     float: left;
     margin-left: 10px;
+
 }
 
 .Contenedor-principal-libros-unidad-txt-1{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
+    font-size: 18px;
     color: #00c4ff;
     line-height: 1.5em;
     font-weight: bold;
@@ -72,7 +73,7 @@
 
 .Contenedor-principal-libros-unidad-txt-autor{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
+    font-size: 18px;
     color: #00c4ff;
     line-height: 1.5em;
     font-weight: bold;
@@ -86,6 +87,8 @@
     float: left;
     width: 100px;
     height: 50px;
+
+
 }
 .Contenedor-principal-libros-unidad-btn-alquilar{
     font-family: Arial, Helvetica, sans-serif;
