--- a/src/styles/Contenedortitulolibro.css
+++ b/src/styles/Contenedortitulolibro.css
@@ -1,5 +1,5 @@
 .Contenedor-principal-titulo{
-    width: 80%;
+    width: 78%;
     padding: 30px;
     background: #e2e2e2;
     margin-top: 20px;
@@ -10,4 +10,5 @@
     font-size: 20px;
     font-weight: bold;
     border-radius: 5px;
+    margin-top: 5%;
 }
