--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,24 +1,23 @@
-.footer{
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
 
-    bottom: 0;
+.content {
+    flex: 1; /* This allows the content to grow and push the footer to the bottom */
+}
 
-
-    text-align: right;
+.footer {
+    background-color: #00c4ff;
     color: white;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
-
-    color: white;
-    background: #00c4ff;
+    text-align: center;
+    padding: 20px 0;
     width: 100%;
-
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
-
-
-    padding: 20px;
-
-
-
 }
