--- a/src/styles/Libros.css
+++ b/src/styles/Libros.css
@@ -1,31 +1,19 @@
-.Contenedor-principal-titulo{
-    width: 80%;
-    padding: 30px;
-    background: #e2e2e2;
-    margin-top: 20px;
-    display: flex;
-    text-align: left;
-    margin-left: 10%;
-    color: #00c4ff;
-    font-size: 20px;
-    font-weight: bold;
-    border-radius: 5px;
-}
 
-.Contenedor-principal-libros{
+.Contenedor-principal-libros {
     margin-top: 20px;
     width: 80%;
     height: 550px;
-    margin-left: 10%;
-    padding-top: 5px;
-    padding-left: 5px;
-    padding-right: 5px;
-    padding-bottom: 5px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 5px;
     border-radius: 5px;
     border: 3px solid #e2e2e2;
     overflow-y: scroll;
     scroll-behavior: smooth;
+    display: flex;
+    flex-direction: column;
 }
+
 
 .Contenedor-principal-libros-unidad
 {   width: 100%;
