--- a/src/styles/Mision.css
+++ b/src/styles/Mision.css
@@ -1,10 +1,13 @@
 .contenedor-mision{
-    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: 20px;
+    max-width: 1200px;
+    margin: 0 auto;
     text-align: center;
     justify-content: center;
-    margin-left: 25%;
-    margin-top: 1%;
+
 
 }
 
